--- a/src/Sitecore.Support.137518/App_Config/Include/zzz/Sitecore.Support.137518.config
+++ b/src/Sitecore.Support.137518/App_Config/Include/zzz/Sitecore.Support.137518.config
@@ -1,5 +1,6 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/">
   <sitecore>
-    <serviceProviderBuilder type="Sitecore.Support.DependencyInjection.DefaultServiceProviderBuilder, Sitecore.Support.137518" patch:instead="*[@type='Sitecore.DependencyInjection.DefaultServiceProviderBuilder, Sitecore.Kernel']" />
+    <serviceProviderBuilder type="Sitecore.DependencyInjection.DefaultServiceProviderBuilder, Sitecore.Kernel" 
+      set:type="Sitecore.Support.DependencyInjection.DefaultServiceProviderBuilder, Sitecore.Support.137518" />
   </sitecore>
 </configuration>
